# guru_grpc_tests

./: .gitignore  README.md  pyproject.toml
internal/grpc/interceptors/: allure.py
internal/pb/: niffler_currency_pb2_pbreflect.py
settings/: settings.py
tests/: conftest.py  test_calculate_rate.py  test_get_all_currencies.py
wiremock/grpc/mappings/: calculateRate.json
